# Viewer

./: .gitignore
3D-viewer/: 3D-viewer.cpp  CMakeLists.txt  CMakePresets.json  GeometryPrimitives.cpp  OpenglRenderSystem.cpp  OpenglRenderSystem.h  Vertex.h  ViewerWindow.cpp  ViewerWindow.h
